# zkevm-circuits

./: Cargo.lock.0  Cargo.toml
bus-mapping/: Cargo.toml
bus-mapping/src/circuit_input_builder/: block.rs
bus-mapping/src/evm/: opcodes.rs
bus-mapping/src/evm/opcodes/: stackonlyop.rs
circuit-benchmarks/: Cargo.toml
eth-types/: Cargo.toml
eth-types/src/evm_types/: stack.rs
integration-tests/contracts/ERC20/: README.md
keccak256/src/: plain.rs
keccak256/src/permutation/: base_conversion.rs
testool/: Cargo.toml  info
testool/src/statetest/: executor.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: evm_circuit.rs  state_circuit.rs  tx_circuit.rs
zkevm-circuits/src/bytecode_circuit/: bytecode_unroller.rs
zkevm-circuits/src/evm_circuit/: execution.rs  util.rs
zkevm-circuits/src/evm_circuit/execution/: create.rs
zkevm-circuits/src/evm_circuit/util/: constraint_builder.rs
zkevm-circuits/src/gadget/: evm_word.rs
zkevm-circuits/src/state_circuit/: dev.rs  state.rs
zkevm-circuits/src/tx_circuit/: sign_verify.rs
